# kpart-text-ui

./: CMakeLists.txt
app/: CMakeLists.txt  telepathy-chat-ui.cpp
part/: CMakeLists.txt  textuipart.cpp  textuipart.desktop  textuipart.h
window/: main.cpp  mainwindow.cpp  mainwindow.h
